--- a/Responsive Web Design/Tribute Page/index.html
+++ b/Responsive Web Design/Tribute Page/index.html
@@ -8,5 +8,7 @@
 
     <link rel="stylesheet" href="./style.css" />
   </head>
-  <body></body>
+  <body>
+    <script src="./main.js"></script>
+  </body>
 </html>
