header information started, images added, favicon inserted

--- a/Responsive Web Design/Tribute Page/index.html
+++ b/Responsive Web Design/Tribute Page/index.html
@@ -6,9 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Tribute Page</title>
 
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <div id="main">
+      <header id="title">
+        <h1>Aleister Crowley</h1>
+        <p>The wickedest man in the world.</p>
+
+        <div id="img-div">
+          <img
+            src="https://upload.wikimedia.org/wikipedia/commons/b/bc/Aleister_Crowley_-_1929.jpg"
+            alt="Aleister Crowley"
+          />
+        </div>
+      </header>
+
+      <main></main>
+    </div>
+
     <script src="./main.js"></script>
   </body>
 </html>
