--- a/Responsive Web Design/Tribute Page/index.html
+++ b/Responsive Web Design/Tribute Page/index.html
@@ -11,16 +11,22 @@
   </head>
   <body>
     <div id="main">
-      <header id="title">
-        <h1>Aleister Crowley</h1>
+      <header>
+        <h1 id="title">Aleister Crowley</h1>
         <p>The wickedest man in the world.</p>
 
-        <div id="img-div">
+        <figure id="img-div">
           <img
             src="https://upload.wikimedia.org/wikipedia/commons/b/bc/Aleister_Crowley_-_1929.jpg"
             alt="Aleister Crowley"
+            id="image"
           />
-        </div>
+
+          <figcaption id="img-caption">
+            Aleister Crowley, prolific occultist and founder of the religion of
+            Thelema, in 1929.
+          </figcaption>
+        </figure>
       </header>
 
       <main></main>
