tribute info working, adding list elements

--- a/Responsive Web Design/Tribute Page/index.html
+++ b/Responsive Web Design/Tribute Page/index.html
@@ -29,7 +29,28 @@
         </figure>
       </header>
 
-      <main></main>
+      <main>
+        <div id="tribute-info">
+          <p>A brief timeline of Aleister Crowley's life.</p>
+          <ul>
+            <li>
+              <strong>October 12th, 1875</strong> - Born in Warwickshire,
+              England.
+            </li>
+          </ul>
+        </div>
+
+        <p>
+          If this vile and despicable creature has piqued your interest, begin
+          your journey with his
+          <a
+            href="https://en.wikipedia.org/wiki/Aleister_Crowley"
+            target="_blank"
+            id="tribute-link"
+            >Wikipedia entry</a
+          >.
+        </p>
+      </main>
     </div>
 
     <script src="./main.js"></script>
