list items done

--- a/Responsive Web Design/Tribute Page/index.html
+++ b/Responsive Web Design/Tribute Page/index.html
@@ -23,8 +23,8 @@
           />
 
           <figcaption id="img-caption">
-            Aleister Crowley, prolific occultist and founder of the religion of
-            Thelema, in 1929.
+            Aleister Crowley, prolific occultist, mountaineer, and founder of
+            the religion of Thelema, in 1929.
           </figcaption>
         </figure>
       </header>
@@ -34,8 +34,62 @@
           <p>A brief timeline of Aleister Crowley's life.</p>
           <ul>
             <li>
-              <strong>October 12th, 1875</strong> - Born in Warwickshire,
-              England.
+              <strong>1875</strong> - Born to a pair of deeply religious
+              evangelical Christians in Warwickshire, England.
+            </li>
+            <li>
+              <strong>1887</strong> - Crowley's father, Edward, dies of cancer.
+              This is the point of no return for Crowley, as he becomes
+              completely hostile to Christianity and revels in the titles
+              bestowed upon him by his own mother: "The Great Beast", "the
+              unholy monster of the Apocalypse (Therion, 666)".
+            </li>
+            <li>
+              <strong>1896</strong> - While on holiday in Sweden, Crowley had a
+              "majoy mystical experience" originating from his first same-sex
+              sexual encounter. This would be the start of his highly
+              promiscuous life while enjoying all genders.
+            </li>
+            <li>
+              <strong>1898</strong> - Crowley is initiated into the Hermetic
+              Order of the Golden Dawn by the group's leader, Samuel Liddell
+              MacGregor Mathers. He adopts the magical name of "Frater
+              Perdurabo".
+            </li>
+            <li>
+              <strong>1904</strong> - On a trip to Cairo, Egypt, Crowley claimed
+              to have heard the voice of "Aiwass", his Holy Guardian Angel.
+              During sessions of automatic writing this holy entity dictated the
+              text of the 'Book of the Law'— the central sacred text that would
+              form the basis of Thelema.
+            </li>
+            <li>
+              <strong>1907</strong> - Leaves the Order of the Golden Dawn and in
+              collaboration with fellow occultist George Cecil Jones creates the
+              A∴A∴, the Argenteum Astrum, through which they begin to build and
+              propagate the religion of Thelema
+            </li>
+            <li>
+              <strong>1912</strong> - Initiated into a German-based esoteric
+              order, the Ordo Templi Orientis (O.T.O.), and rose to become the
+              leader of its British branch. He reformulated the branch in
+              accordance with his Thelemite beliefs.
+            </li>
+            <li>
+              <strong>1920</strong> - Founded the Abbey of Thelema in Cefalù,
+              Sicily where he lived with his various followers. Their libertine
+              lifestyle led to denunciations in the British press.
+            </li>
+            <li>
+              <strong>1923</strong> - Evicted from Sicily by the Italian
+              government following the mysterious death of a young Englishman
+              residing at the abbey.
+            </li>
+            <li>
+              <strong>1947</strong> - Died in Hastings, England at the age of
+              72. Crowley's last words were reportedly, "I am perplexed". The
+              last doctor to have treated him died within 24 hours of Crowley's
+              death— supposedly of a curse the magician had put on him.
             </li>
           </ul>
         </div>
