added basic styling to the page

--- a/Responsive Web Design/Tribute Page/index.html
+++ b/Responsive Web Design/Tribute Page/index.html
@@ -13,7 +13,7 @@
     <div id="main">
       <header>
         <h1 id="title">Aleister Crowley</h1>
-        <p>The wickedest man in the world.</p>
+        <p id="subtitle">The wickedest man in the world.</p>
 
         <figure id="img-div">
           <img
@@ -31,65 +31,66 @@
 
       <main>
         <div id="tribute-info">
-          <p>A brief timeline of Aleister Crowley's life.</p>
+          <p id="list-title">A brief timeline of Aleister Crowley's life.</p>
           <ul>
             <li>
-              <strong>1875</strong> - Born to a pair of deeply religious
-              evangelical Christians in Warwickshire, England.
+              <span class="date">1875</span> - Born to a pair of deeply
+              religious evangelical Christians in Warwickshire, England.
             </li>
             <li>
-              <strong>1887</strong> - Crowley's father, Edward, dies of cancer.
-              This is the point of no return for Crowley, as he becomes
+              <span class="date">1887</span> - Crowley's father, Edward, dies of
+              cancer. This is the point of no return for Crowley, as he becomes
               completely hostile to Christianity and revels in the titles
               bestowed upon him by his own mother: "The Great Beast", "the
               unholy monster of the Apocalypse (Therion, 666)".
             </li>
             <li>
-              <strong>1896</strong> - While on holiday in Sweden, Crowley had a
-              "majoy mystical experience" originating from his first same-sex
-              sexual encounter. This would be the start of his highly
-              promiscuous life while enjoying all genders.
+              <span class="date">1896</span> - While on holiday in Sweden,
+              Crowley had a "majoy mystical experience" originating from his
+              first same-sex sexual encounter. This would be the start of his
+              highly promiscuous life while enjoying all genders.
             </li>
             <li>
-              <strong>1898</strong> - Crowley is initiated into the Hermetic
-              Order of the Golden Dawn by the group's leader, Samuel Liddell
-              MacGregor Mathers. He adopts the magical name of "Frater
+              <span class="date">1898</span> - Crowley is initiated into the
+              Hermetic Order of the Golden Dawn by the group's leader, Samuel
+              Liddell MacGregor Mathers. He adopts the magical name of "Frater
               Perdurabo".
             </li>
             <li>
-              <strong>1904</strong> - On a trip to Cairo, Egypt, Crowley claimed
-              to have heard the voice of "Aiwass", his Holy Guardian Angel.
-              During sessions of automatic writing this holy entity dictated the
-              text of the 'Book of the Law'— the central sacred text that would
-              form the basis of Thelema.
+              <span class="date">1904</span> - On a trip to Cairo, Egypt,
+              Crowley claimed to have heard the voice of "Aiwass", his Holy
+              Guardian Angel. During sessions of automatic writing this holy
+              entity dictated the text of the 'Book of the Law'— the central
+              sacred text that would form the basis of Thelema.
             </li>
             <li>
-              <strong>1907</strong> - Leaves the Order of the Golden Dawn and in
-              collaboration with fellow occultist George Cecil Jones creates the
-              A∴A∴, the Argenteum Astrum, through which they begin to build and
-              propagate the religion of Thelema
+              <span class="date">1907</span> - Leaves the Order of the Golden
+              Dawn and in collaboration with fellow occultist George Cecil Jones
+              creates the A∴A∴, the Argenteum Astrum, through which they begin
+              to build and propagate the religion of Thelema
             </li>
             <li>
-              <strong>1912</strong> - Initiated into a German-based esoteric
-              order, the Ordo Templi Orientis (O.T.O.), and rose to become the
-              leader of its British branch. He reformulated the branch in
-              accordance with his Thelemite beliefs.
+              <span class="date">1912</span> - Initiated into a German-based
+              esoteric order, the Ordo Templi Orientis (O.T.O.), and rose to
+              become the leader of its British branch. He reformulated the
+              branch in accordance with his Thelemite beliefs.
             </li>
             <li>
-              <strong>1920</strong> - Founded the Abbey of Thelema in Cefalù,
-              Sicily where he lived with his various followers. Their libertine
-              lifestyle led to denunciations in the British press.
+              <span class="date">1920</span> - Founded the Abbey of Thelema in
+              Cefalù, Sicily where he lived with his various followers. Their
+              libertine lifestyle led to denunciations in the British press.
             </li>
             <li>
-              <strong>1923</strong> - Evicted from Sicily by the Italian
-              government following the mysterious death of a young Englishman
-              residing at the abbey.
+              <span class="date">1923</span> - Evicted from Sicily by the
+              Italian government following the mysterious death of a young
+              Englishman residing at the abbey.
             </li>
             <li>
-              <strong>1947</strong> - Died in Hastings, England at the age of
-              72. Crowley's last words were reportedly, "I am perplexed". The
-              last doctor to have treated him died within 24 hours of Crowley's
-              death— supposedly of a curse the magician had put on him.
+              <span class="date">1947</span> - Died in Hastings, England at the
+              age of 72. Crowley's last words were reportedly, "I am perplexed".
+              The last doctor to have treated him died within 24 hours of
+              Crowley's death— supposedly of a curse the magician had put on
+              him.
             </li>
           </ul>
         </div>
