--- a/Responsive Web Design/Tribute Page/index.html
+++ b/Responsive Web Design/Tribute Page/index.html
@@ -31,7 +31,7 @@
 
       <main>
         <div id="tribute-info">
-          <p id="list-title">A brief timeline of Aleister Crowley's life.</p>
+          <h2 id="list-title">A brief timeline of Aleister Crowley's life.</h2>
           <ul>
             <li>
               <span class="date">1875</span> - Born to a pair of deeply
@@ -95,7 +95,7 @@
           </ul>
         </div>
 
-        <p>
+        <h3>
           If this vile and despicable creature has piqued your interest, begin
           your journey with his
           <a
@@ -104,10 +104,8 @@
             id="tribute-link"
             >Wikipedia entry</a
           >.
-        </p>
+        </h3>
       </main>
     </div>
-
-    <script src="./main.js"></script>
   </body>
 </html>
