starting header for survey form

--- a/Responsive Web Design/Survey Form/index.html
+++ b/Responsive Web Design/Survey Form/index.html
@@ -9,6 +9,14 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+
+    <header>
+      <h1 id="title">Jackass Forever Feedback Form</h1>
+      <p id="description">God bless Johnny Knoxville and the whole crew. Tell me all about 'em.</p>
+    </header>
+    
+    <main></main>
+
     <script src="./main.js"></script>
   </body>
 </html>
