applied light styles to tribute page

--- a/Responsive Web Design/Survey Form/index.html
+++ b/Responsive Web Design/Survey Form/index.html
@@ -12,7 +12,7 @@
 
     <header>
       <h1 id="title">Jackass Forever Feedback Form</h1>
-      <p id="description">God bless Johnny Knoxville and the whole crew. Tell me all about 'em.</p>
+      <p id="description">God bless Johnny Knoxville and the whole crew. Tell me all about 'em. #PoopiesForPresident</p>
     </header>
     
     <main></main>
