--- a/Responsive Web Design/Tribute Page/index.html
+++ b/Responsive Web Design/Tribute Page/index.html
@@ -13,7 +13,7 @@
     <div id="main">
       <header>
         <h1 id="title">Aleister Crowley</h1>
-        <p id="subtitle">The wickedest man in the world.</p>
+        <p id="subtitle"><em>The wickedest man in the world.</em></p>
 
         <figure id="img-div">
           <img
@@ -23,8 +23,8 @@
           />
 
           <figcaption id="img-caption">
-            Aleister Crowley, prolific occultist, mountaineer, and founder of
-            the religion of Thelema, in 1929.
+            <em>Aleister Crowley, prolific occultist, mountaineer, and founder of
+            the religion of Thelema, in 1929.</em>
           </figcaption>
         </figure>
       </header>
@@ -96,7 +96,7 @@
         </div>
 
         <h3>
-          If this vile and despicable creature has piqued your interest, begin
+          If this vile and despicable creature has piqued your interest, do what thou wilt and begin
           your journey with his
           <a
             href="https://en.wikipedia.org/wiki/Aleister_Crowley"
