--- a/Responsive Web Design/Survey Form/index.html
+++ b/Responsive Web Design/Survey Form/index.html
@@ -14,6 +14,26 @@
     <header>
       <h1 id="title">Jackass Forever Feedback Form</h1>
       <p id="description">God bless Johnny Knoxville and the whole crew. Tell me all about 'em. #PoopiesForPresident</p>
+      
+      <div class="container">
+        <form id="survey-form">
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" name="name" id="name" placeholder="Enter your name" required>
+          </div>
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" name="email" id="email" placeholder="Enter your email" required>
+          </div>
+          <div class="form-group">
+            <label for="age">Age (optional)</label>
+            <input type="number" name="age" id="age" min="10" max="100" placeholder="10-100">
+          </div>
+          <div class="form-group">
+            <button type="submit" id="submit submit-button">Submit</button>
+          </div>
+        </form>
+      </div>
     </header>
     
     <main></main>
