--- a/Responsive Web Design/Survey Form/index.html
+++ b/Responsive Web Design/Survey Form/index.html
@@ -18,16 +18,28 @@
       <div class="container">
         <form id="survey-form">
           <div class="form-group">
-            <label for="name">Name</label>
+            <label for="name" id="name-label">Name</label>
             <input type="text" name="name" id="name" placeholder="Enter your name" required>
           </div>
           <div class="form-group">
-            <label for="email">Email</label>
+            <label for="email" id="email-label">Email</label>
             <input type="email" name="email" id="email" placeholder="Enter your email" required>
           </div>
           <div class="form-group">
-            <label for="age">Age (optional)</label>
-            <input type="number" name="age" id="age" min="10" max="100" placeholder="10-100">
+            <label for="number" id="number-label">Age (optional)</label>
+            <input type="number" name="age" id="number" min="10" max="100" placeholder="10-100">
+          </div>
+          <div class="form-group">
+            <label for="dropdown">What was the first Jackass you watched?</label>
+            <select type="number" name="dropdown" id="dropdown">
+              <option value="" disabled selected>Select a Jackass</option>
+              <option value="the-show">Jackass the TV Show</option>
+              <option value="the-movie">Jackass: The Movie</option>
+              <option value="number-two">Jackass: Number Two</option>
+              <option value="3d">Jackass 3D</option>
+              <option value="bad-grandpa">Jackass Presents: Bad Grandpa</option>
+              <option value="forever">Jackass Forever</option>
+            </select>
           </div>
           <div class="form-group">
             <button type="submit" id="submit submit-button">Submit</button>
