radio form done

--- a/Responsive Web Design/Survey Form/index.html
+++ b/Responsive Web Design/Survey Form/index.html
@@ -44,6 +44,21 @@
           </div>
 
           <div class="form-group">
+            <p>From the list below, which of these is one of your favorite Jackass Stunts?</p>
+
+            <input type="radio" name="favorite-skit" id="burglars" class="radio-input" value="The Burglars" checked>
+            <label for="favorite-stunt">The Burglars</label><br>
+            <input type="radio" name="favorite-skit" id="toro-totter" class="radio-input" value="Toro Totter">
+            <label for="favorite-stunt">Toro Totter</label><br>
+            <input type="radio" name="favorite-skit" id="poo-cocktail-supreme" class="radio-input" value="Poo Cocktail Supreme">
+            <label for="favorite-stunt">Poo Cocktail Supreme</label><br>
+            <input type="radio" name="favorite-skit" id="fireworks" class="radio-input" value="Fireworks Wake-Up">
+            <label for="favorite-stunt">Fireworks Wake-Up</label><br>
+            <input type="radio" name="favorite-skit" id="beekini" class="radio-input" value="Furniture Shopping">
+            <label for="favorite-stunt">Furniture Shopping</label>
+          </div>
+
+          <div class="form-group">
             <button type="submit" id="submit submit-button">Submit</button>
           </div>
         </form>
