started checkbox, styled hint span

--- a/Responsive Web Design/Survey Form/index.html
+++ b/Responsive Web Design/Survey Form/index.html
@@ -57,6 +57,10 @@
             <input type="radio" name="favorite-skit" id="beekini" class="radio-input" value="Furniture Shopping">
             <label for="favorite-stunt">Furniture Shopping</label>
           </div>
+            
+          <div class="form-group">
+            <p>Who are your favorite Jackass stars? <span class="hint">(Check all that apply)</span></p>
+          </div>
 
           <div class="form-group">
             <button type="submit" id="submit submit-button">Submit</button>
