modified html layout

--- a/Responsive Web Design/Survey Form/index.html
+++ b/Responsive Web Design/Survey Form/index.html
@@ -16,7 +16,9 @@
         God bless Johnny Knoxville and the whole crew. Tell me all about 'em.
         #PoopiesForPresident
       </p>
+    </header>
 
+    <main>
       <div class="container">
         <form id="survey-form">
           <div class="form-group">
@@ -196,14 +198,23 @@
           </div>
 
           <div class="form-group">
+            <p>Any additional comments?</p>
+            <label for="comment-box">
+              <textarea
+                name="comment-box"
+                id="comment-box"
+                cols="75"
+                rows="10"
+                placeholder="Enter your comments here"
+              ></textarea>
+            </label>
+          </div>
+
+          <div class="form-group">
             <button type="submit" id="submit submit-button">Submit</button>
           </div>
         </form>
       </div>
-    </header>
-
-    <main></main>
-
-    <script src="./main.js"></script>
+    </main>
   </body>
 </html>
