--- a/Responsive Web Design/Landing Page/index.html
+++ b/Responsive Web Design/Landing Page/index.html
@@ -9,6 +9,29 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <script src="./main.js"></script>
+    <header id="header">
+      <div id="logo">Innocuous Business That Did Nothing Wrong</div>
+      <nav id="nav-bar">
+        <ul>
+          <li class="nav-link">Features</li>
+          <li class="nav-link">How It Works</li>
+          <li class="nav-link">Pricing</li>
+        </ul>
+      </nav>
+    </header>
+
+    <main></main>
+
+    <footer>
+      <ul>
+        <li class="footer-link">Privacy</li>
+        <li class="footer-link">Terms</li>
+        <li class="footer-link">Contact</li>
+      </ul>
+
+      <p id="copyright-disclaimer">
+        Copyright 2022, Innocuous Business That Did Nothing Wrong
+      </p>
+    </footer>
   </body>
 </html>
